--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     },
     "engines": {
         "node": ">=22.0.0"
+    },
+    "dependencies": {
+        "urlpattern-polyfill": "^10.0.0"
     }
 }
