--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "description": "Hash table service for storing and retrieving binary blobs using their SHA-256 hashes as keys.",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node ./src/tinyvalapi/index.js",
+        "test": "node --test"
     },
     "engines": {
         "node": ">=22.0.0"
